force-app/main/default/objects/BusinessCentralSetting__c/BusinessCentralSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Business Central Setting</label>
</CustomObject>