force-app/main/default/objects/BusinessCentralSetting__c/fields/IsLive__c.field-meta.xml
<CustomField>
    <fullName>IsLive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live?</label>
    <type>Checkbox</type>
</CustomField>