force-app/main/default/objects/BusinessCentralSetting__c/fields/SendAccount__c.field-meta.xml
<CustomField>
    <fullName>SendAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Account?</label>
    <type>Checkbox</type>
</CustomField>