force-app/main/default/objects/BusinessCentralSetting__c/fields/SendInvoice__c.field-meta.xml
<CustomField>
    <fullName>SendInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Invoice?</label>
    <type>Checkbox</type>
</CustomField>