force-app/main/default/objects/BusinessCentralSetting__c/fields/SendPayment__c.field-meta.xml
<CustomField>
    <fullName>SendPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Payment?</label>
    <type>Checkbox</type>
</CustomField>