force-app/main/default/objects/BusinessCentralSetting__c/fields/UnallocatedFinanceAccountId__c.field-meta.xml
<CustomField>
    <fullName>UnallocatedFinanceAccountId__c</fullName>
    <label>Unallocated Finance Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>